assets/css/style.css
/* Asterisk wildcard selector to override default styles added by the browser */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
/* General styles */
body {
    margin: 0 auto;
    padding: 0;
    height: 100%;
    width: 100%;
    display: flex;
    font-family:Georgia, 'Times New Roman', Times, serif;
    flex-direction: column;
    border: 2px solid darkgreen
    
}
h1 {
    color: darkgreen;
    font-size: 1.3rem;
}
h2, h3 {
    color: darkgreen;
    font-size: 1.2rem;
}

p {
    color: darkgreen;
    font-size: 0.7rem;
}
/* general styling*/
.sections {
    background-color: beige;
    }
    /* background picture for header*/
.picture {
    background: url(../images/two-men-fishing.jpg) no-repeat center center / cover;
    width: 100%; 
    height: 60vh;
    position: relative;
}
/* cover-text for picture */
.cover-picture {
    background-color: rgba(205, 209, 228, 0.8);
    position: absolute;
    padding: 5px;
    right: 10px;
    top: 5px;
    text-align: center;
    flex-wrap: wrap;
    border: 1px solid beige;
    border-radius: 10px;
}
/* Styling for Navbar*/
nav {
    display: flex;
    justify-content: flex-end;
    background-color: beige;
    padding: 1rem 1rem 1rem 1rem;
    }
nav > #left {
    justify-content: flex-start;
    position: absolute;
    left: 1rem;
    text-transform: uppercase;
}
#right > a {
    padding-left: 0.5rem;
    }
a {
    color: darkgreen;
    font-size: 0.5rem;
    text-decoration: none;
}
/* making hover effects on navbar*/
a:hover {
    border-bottom: 2px solid lightblue;
}
/* About us section*/
#about {
    padding: 10px;
    text-align: left;
    background-color: beige;
}
/* course content*/
.about-cover {
    background-color: rgba(1, 50, 32, 0.7);
    border: 1px solid beige;
    border-radius: 20px;
    padding: 50px;
    color: white;
    font-size: 0.7rem;
}
.about-cover h3 {
    color: white;
}

/* sign up section*/
#signup {
    background: url(../images/man-holding-fishing-rod.jpg)no-repeat center center / cover;
    color: black;
    padding: 40px;
    
}
#signup h3 {
    color: black;
}
/* styling for type text*/
input {
    border-radius: 5px;
    font-size: 1rem;
    border: 1px solid darkgreen;
    background-color: beige;
    opacity: 0.7;
}
.submit-size {
    font-size: 1rem;
    border: 1px solid darkgreen;
    border-radius: 5px;
    background-color: beige;
}
/* General footer styling*/
footer {
margin: 0;
}
/* styling for contact content*/
#contact {
    background-color: beige;
    padding: 50px;
    display: flex;
    flex-direction: column;
    gap: 30px;
    text-align: center;
}
#contact h2, h3 {
    font-size: 1.2rem;
}
#contact p {
    font-size: 0.7rem;
}
/* Icons for socialmedia*/
#social-networks {
    display: flex;
    gap:40px;    
    justify-content: center;
    align-content: center;
}
/* size of social media icons*/
#social-networks a {
    font-size: 1.5rem;
}
/*Responsive styling for bigger screens*/
@media screen and (min-width: 768px) {
    .picture {
        height: 85vh;
    }
    .cover-picture {
        padding: 15px;
        right: 60px;
        top: 55px;
        left:60px;
        border-radius: 20px;
    }
    #about {
        padding:100px;
        padding-left: 90px;
    }
    .center {
        text-align: center;
    }
    h1 {
        font-size: 2rem;
    }
    h2 {
        font-size: 1.7rem;
    }
    h3 {
        font-size: 1.5rem;
    }
    p {
        font-size: 1.2rem;
    }
    .about-cover {
        font-size: 1.2rem;
    }
    /* styling for navbar*/
    a {
        font-size: 1rem;
    }
    nav {
        padding: 1rem 1rem 1rem 1rem;
        }
    #right > a {
        padding-left: 1.5rem;
        }
        /* styling for signup*/
    #signup {
        font-size: 2.5rem;
        padding: 90px;
        display: block;
        justify-content: center;
    
    }
    #signup h3 {
        font-size: 3rem;
    }
    .submit-size {
        font-size: 2rem;
        border-radius: 10px;
        background-color: beige;
    }
    input {
        border-radius: 10px;
        font-size: 1.5rem;
    }
    /* styling for contact*/
    #contact h2{
        font-size: 2.5rem;
    }
    #contact p {
        font-size: 1.5rem;
    }
    #social-networks {
        gap: 60px;
    }
    /* size of social media icons*/
#social-networks a {
    font-size: 2.5rem;
}
    #contact {
        padding: 100px;
    }
}

